--- a/index.html
+++ b/index.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    qwertyuiop[]\
-</body>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <script defer src="./assets/js/index.js"></script>
+  </head>
+  <body class="wrapper">
+    <header class="header">
+      <h1 class="header-title">Medoded</h1>
+      <nav class="navigation">
+        <div class="navigation-menu">
+          <h3>ABOUT</h3>
+          <h3>SKILLS</h3>
+          <h3>SERVICES</h3>
+          <h3>PORTFOLIO</h3>
+        </div>
+
+        <label for="switch" class="light-switch">
+          <input type="checkbox" id="switch" />
+          <div class="switcher"></div>
+        </label>
+      </nav>
+    </header>
+    <main class="main">
+      <aside class="sidebar">
+        <img src="./assets/img/profile.svg" alt="" />
+        <div class="sidebar-title">
+          <h2>Anton Developer</h2>
+          <h4>Frontend Developer</h4>
+        </div>
+        <p>High level experience in web design and development knowledge.</p>
+        <div class="sidebar-links">
+          <a target="_blank" href="https://github.com/Dmitriy228pro"><img src="./assets/img/icons/github.svg" alt="" /></a>
+          <img src="./assets/img/icons/facebook.svg" alt="" />
+          <img src="./assets/img/icons/instagram.svg" alt="" />
+        </div>
+        <button class="btn-contact">Contact me</button>
+      </aside>
+      <main class="page-about">
+        <section class="page-about__about">
+          <div class="about__titles">
+            <h2>About</h2>
+            <p>
+              Web developer, with extensive knowledge and years of experience,
+              working in web technologies and UI/UX design, delivering quality
+              work.
+            </p>
+          </div>
+          <div class="about__card-list">
+            <article class="about-card-item">
+              <img src="./assets/img/icons/fire.svg" alt="" />
+              <footer class="about-card-item__footer">
+                <h4>Years experience</h4>
+                <h1>20</h1>
+              </footer>
+            </article>
+            <article class="about-card-item">
+              <img src="./assets/img/icons/projects.svg" alt="" />
+              <footer class="about-card-item__footer">
+                <h4>Completed projects</h4>
+                <h1>6</h1>
+              </footer>
+            </article>
+            <article class="about-card-item">
+              <img src="./assets/img/icons/house.svg" alt="" />
+              <footer class="about-card-item__footer">
+                <h4>Companies worked</h4>
+                <h1>3</h1>
+              </footer>
+            </article>
+          </div>
+        </section>
+        <section class="page-about__qualification">
+          <h2>Qualification</h2>
+          <div class="page-about__choice-block">
+            <div id="education" class="choice-block__btn">
+              <img src="./assets/img/icons/education.svg" alt="" />
+              <h5>Education</h5>
+            </div>
+
+            <div id="work" class="choice-block__btn">
+              <img src="./assets/img/icons/work.svg" alt="" />
+              <h5>Work</h5>
+            </div>
+          </div>
+
+          <div class="page-about__profile-list">
+            <article class="profile-item">
+              <h5>Computer Engineer</h5>
+              <div class="profile-item__bottom">
+                <h5>Peru - University</h5>
+                <div class="profile-item__date">
+                  <img src="./assets/img/calenadar.svg" alt="" />
+                  <h6>2009 - 2014</h6>
+                </div>
+              </div>
+            </article>
+          </div>
+        </section>
+      </main>
+    </main>
+  <!-- <h1 id="50">HE HE</h1> -->
+    </body>
 </html>
